Add Notifier class to clean up Crawler/Scraper communication between threads

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -67,17 +67,17 @@
 
 				<div>
 					<label for="max-imgs">Maximum images to retrieve</label>
-					<input type="numeric" value="100" id="max-imgs">
+					<input type="number" value="100" id="max-imgs">
 				</div>
 
 				<div>
 					<label for="max-pages">Maximum distinct pages to crawl</label>
-					<input type="numeric" value="20" id="max-pages">
+					<input type="number" value="20" id="max-pages">
 				</div>
 
 				<div>
 					<label for="max-depth">Maximum crawl depth</label>
-					<input type="numeric" value="5" id="max-depth">
+					<input type="number" value="5" id="max-depth">
 				</div>
 
 				<div>
