--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -81,6 +81,11 @@
 				</div>
 
 				<div>
+					<label for="is-single-threaded">Use single thread? (usually sower)</label>
+					<input type="checkbox" id="is-single-threaded">
+				</div>
+
+				<div>
 					<label for="include-svgs">Include SVGs? (very often used for icons/logos)</label>
 					<input type="checkbox" id="include-svgs">
 				</div>
@@ -106,6 +111,7 @@
 		var maxImgsInput = document.querySelector('input[id=max-imgs]');
 		var maxUrlsInput = document.querySelector('input[id=max-pages]');
 		var maxDepthInput = document.querySelector('input[id=max-depth]');
+		var isSingleThreadedInput = document.querySelector('input[id=is-single-threaded]');
 		var includeSvgsInput = document.querySelector('input[id=include-svgs]');
 		var includePngsInput = document.querySelector('input[id=include-pngs]');
 
@@ -150,9 +156,11 @@
 				maxImgs: maxImgsInput.value,
 				maxUrls: maxUrlsInput.value,
 				maxDepth: maxDepthInput.value,
+				isSingleThreaded: isSingleThreadedInput.checked,
 				shouldIncludeSvgs: includeSvgsInput.checked,
 				shouldIncludePngs: includePngsInput.checked,
 			};
+			console.log(postBody);
 			makeApiCall('/main', 'POST', postBody, updateList);
 		});
 	</script>
