Nits: clean up logs + frontend

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -81,7 +81,7 @@
 				</div>
 
 				<div>
-					<label for="is-single-threaded">Use single thread? (usually sower)</label>
+					<label for="is-single-threaded">Use single thread? (usually significantly slower)</label>
 					<input type="checkbox" id="is-single-threaded">
 				</div>
 
