--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -94,6 +94,11 @@
 					<label for="include-pngs">Include PNGs? (sometimes used for icons/logos)</label>
 					<input type="checkbox" id="include-pngs">
 				</div>
+
+				<div>
+					<label for="max-crawl-time-ms">Max crawl time (ms)</label>
+					<input type="number" value="3333" id="max-crawl-time-ms">
+				</div>
 			</form>
 			<button type="button">Submit!</button>
 		</div>
@@ -114,6 +119,7 @@
 		var isSingleThreadedInput = document.querySelector('input[id=is-single-threaded]');
 		var includeSvgsInput = document.querySelector('input[id=include-svgs]');
 		var includePngsInput = document.querySelector('input[id=include-pngs]');
+		var maxCrawlTimeMsInput = document.querySelector('input[id=max-crawl-time-ms]');
 
 		apiCallBack = function(xhr, callback) {
 			if (xhr.readyState == XMLHttpRequest.DONE) {
@@ -159,6 +165,7 @@
 				isSingleThreaded: isSingleThreadedInput.checked,
 				shouldIncludeSvgs: includeSvgsInput.checked,
 				shouldIncludePngs: includePngsInput.checked,
+				maxCrawlTimeMs: maxCrawlTimeMsInput.value 
 			};
 			console.log(postBody);
 			makeApiCall('/main', 'POST', postBody, updateList);
