Refactor Crawler and extending classes: share BFS management logic, implement level-handling logic in child classes

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -96,7 +96,7 @@
 				</div>
 
 				<div>
-					<label for="max-crawl-time-ms">Max crawl time (ms)</label>
+					<label for="max-crawl-time-ms">Maximum crawl time (ms)</label>
 					<input type="number" value="3333" id="max-crawl-time-ms">
 				</div>
 			</form>
